# decomp-academy-be

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  samconfig.toml  template.yaml  tsconfig.json
.github/workflows/: deploy.yml
api/: Cargo.toml  Makefile
api/emails/: feedback_notification.html  feedback_notification.txt  feedback_reply.html  feedback_reply.txt  password_reset.html  password_reset.txt  verification_signup.html  verification_signup.txt  verification_verify_email.html  verification_verify_email.txt
api/src/: lib.rs
compiler/: .gitignore  Cargo.toml  Makefile  build.rs  compilers.list
compiler/scripts/: fetch-toolchain.sh
compiler/src/: compile.rs  main.rs
scripts/: export-emails.entry.tsx  export-emails.mjs
src/emails/: EmailLayout.tsx  FeedbackNotificationEmail.tsx  FeedbackReplyEmail.tsx  PasswordResetEmail.tsx  VerificationEmail.tsx  theme.ts
