[package]
name = "decomp-academy-api"
version = "1.0.0"
edition = "2021"
description = "Auth/user-data API + Cognito custom email sender (AWS Lambda, provided.al2023)."

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "email-sender"
path = "src/bin/email_sender.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

lambda_runtime = "0.13"
lambda_http = "0.13"

aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio"] }
aws-sdk-dynamodb = "1"
aws-sdk-kms = "1"
aws-esdk = "1"
aws-smithy-types = "1"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }

[profile.release]
strip = true
# lto + codegen-units left at cargo defaults (off / 16): these Lambdas are I/O-bound
# (DynamoDB / HTTP), so the lost optimisation is immaterial, and dropping LTO
# roughly halves CI build time (esp. the aws-lc-sys / aws-sdk codegen).
