[package]
name = "mwcc-compile-lambda"
version = "1.0.0"
edition = "2021"
description = "MWCC GC/2.0 compile + disassemble service on AWS Lambda (provided.al2023)."

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_http = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
regex = "1"

[profile.release]
strip = true
# lto + codegen-units left at cargo defaults (off / 16): this service is
# subprocess-bound (it shells out to wibo/mwcc/objdump), so the lost optimisation
# is immaterial, and dropping LTO roughly halves CI build time.
